@@ -418,6 +418,7 @@ Then open ~/.local/share/applications/spacefm.desktop in your editor and set the
 <!-- # Editing Keys #keys -->
 When the cursor is in the Path Bar, the following editing key combinations can be used:
 
+<br><br>
 <table border=1 cellpadding="5">
 <tr>
 	<th>Key Combo</th>
@@ -426,29 +427,25 @@ When the cursor is in the Path Bar, the following editing key combinations can b
 	<tr>
 		<td>Shift+Backspace</td> <td>Clear the entry</td>
 	</tr><tr>
-		<td>Ctrl+Backspace</td> <td>Backspace to the previous '/'</td>
+		<td>Ctrl+Backspace</td> <td>Backspace to the previous separator</td>
 	</tr><tr>
 		<td>Tab</td> <td><a href="#gui-pathbar-tab">Complete entry</a></td>
 	</tr>
 </table>
 
 <!-- # Auto Seek #seek -->
-By default, the Path Bar will auto seek, which means that as you type in the Path Bar, the current directory will change automatically, and any partial filename typed will select the first matching directory or file found in the file list.  You can turn off auto seek by right-clicking on the Path Bar and unchecking option Auto Seek.  In this case, you must press the Enter key to change to the directory entered.
+By default, the Path Bar will auto seek, which means that as you type in the Path Bar, the current directory will change automatically, and any partial filename typed will select the first matching directory or file found in the file list.  You can turn off auto seek by right-clicking on the Path Bar and unchecking option Auto Seek.  In this case, you will need to press the Enter key to change to the directory entered.
 
-<p>To locate files within the current directory, use <a href="#gui-find">Find-As_you-Type search</a> or <a href="#gui-pathbar-pattern">Edit|Select By Pattern</a>.
+<p>To locate files within the current directory, use <a href="#gui-find">Find-As_you-Type search</a> or <a href="#gui-pathbar-pattern">Edit|Select By Pattern</a>.  See also <a href="#gui-pathbar-bread">Breadcrumbs</a>.
 
 <!-- # Completion #tab -->
 As you're entering a directory path in the Path Bar, completion will be active.  For example, if you enter "/us", a drop down box will appear listing /usr (and any other directories that may begin with "/us" on your system).  You can press Tab to complete the entry automatically ("/us" will be completed to "/usr/", or as much as possible if there are multiple matches).  If multiple possibilities are listed, press Down Arrow to select the desired completion and press Enter (or select it using the mouse).
 
-<!-- # File Path -->
-The path to a file may be entered or pasted in the Path Bar.  When you press Enter, SpaceFM will change to the directory containing the file and will select the file in the file list.  (If Auto Seek is enabled, you don't need to press Enter.)
-
 <!-- # Breadcrumbs #bread -->
-The Breadcrumbs feature allows you to Ctrl+Click on a portion of the path in the Path Bar to change to that level directory.  For example, if this path is currently in the Path Bar:
-<pre>    /usr/<b>share</b>/spacefm/plugins</pre>
+The Breadcrumbs feature allows you to click on a portion of the path in the Path Bar to trim the path back.  If <a href="#gui-pathbar-seek">Auto Seek</a> is enabled (the default), this will also immediately change to the new path.  Or, use Ctrl+Click to force the directory change.  For example, if this path is currently <i>/usr/<b>share</b>/spacefm/pluginsin</i> and you click on the name 'share', the path will change to <i>/usr/share</i>.  This provides a convenient way to go up to a specific directory.
 
-and you Ctrl+Click on the name 'share', SpaceFM will change to directory /usr/share.  This provides a convenient way to go up to a specific directory.
-
+<!-- # File Path -->
+The path to a file may be entered or pasted in the Path Bar.  When you press Enter, SpaceFM will change to the directory containing the file and will select the file in the file list.
 
 <!-- # Protocol URL #proto -->
 Any entry in the Path Bar which looks like a protocol, such as <i>ftp://mirrors.kernel.org/</i>, will be opened with the Protocol Handler.  By default, SpaceFM uses <a href="http://ignorantguru.github.com/udevil/">udevil</a> as the handler, unless a <a href="#gui-pathbar-protohand">custom Protocol Handler</a> has been configured.  If udevil recognizes the protocol, it will be mounted and SpaceFM will automatically open the mount point directory (in most cases).  If the <a href="#devices-list">Devices List</a> has option <a href="#devices-settings-net">Settings|Show|Mounted Networks</a> checked, the new network filesystem will be listed.
@@ -577,7 +574,7 @@ Or to run umount in a terminal (+) as root (!) passing it the currently selected
 For a reminder of prefixes and substitution variables, enter a lone dollar sign ($) in the Path Bar and press Enter.  Or press F1 while the Path Bar has focus to open this manual.
 
 <!-- # Command History #hist -->
-SpaceFM also keeps a command history.  As you enter a command, any commands previously entered (in the current instance) will be shown in a popup.  Use Up/Down Arrow keys to select a previous command and press Enter, or click it.
+SpaceFM also keeps a command history.  As you enter a command, any commands previously entered will be shown in a popup.  Use Up/Down Arrow keys to select a previous command and press Enter, or click it.
 
 
 <!-- # Select By Pattern #pattern -->
