@@ -626,14 +626,14 @@ static gboolean on_button_press( GtkWidget* entry, GdkEventButton *evt,
     return FALSE;
 }
 
-static gboolean on_button_release(GtkEntry      *entry,
-                                                                    GdkEventButton *evt,
-                                                                    gpointer        user_data)
+static gboolean on_button_release( GtkEntry       *entry,
+                                   GdkEventButton *evt,
+                                   gpointer        user_data )
 {
     if ( GDK_BUTTON_RELEASE != evt->type )
         return FALSE;
 
-    if ( ( ( evt->state & GDK_CONTROL_MASK ) && 1 == evt->button ) )
+    if ( 1 == evt->button )
     {
         int pos;
         const char *text, *sep;
@@ -643,7 +643,12 @@ static gboolean on_button_release(GtkEntry      *entry,
         if ( !( text[0] == '$' || text[0] == '+' || text[0] == '&'
                   || text[0] == '!' || text[0] == '%' || text[0] == '\0' ) )
         {
-            pos = gtk_editable_get_position( GTK_EDITABLE(entry) );
+            if ( !( evt->state & GDK_CONTROL_MASK ) && 
+                        gtk_editable_get_selection_bounds( GTK_EDITABLE( entry ),
+                                                           NULL, NULL ) )
+                // text is selected - no auto breadcrumbs
+                return FALSE;
+            pos = gtk_editable_get_position( GTK_EDITABLE( entry ) );
             if( G_LIKELY( text && *text ) )
             {
                 sep = g_utf8_offset_to_pointer( text, pos );
@@ -660,9 +665,11 @@ static gboolean on_button_release(GtkEntry      *entry,
                     }
                     path = g_strndup( text, (sep - text) );
                     gtk_entry_set_text( entry, path );
+                    gtk_editable_set_position( (GtkEditable*)entry, -1 );
                     g_free( path );
 
-                    gtk_widget_activate( (GtkWidget*)entry );
+                    if ( evt->state & GDK_CONTROL_MASK )
+                        gtk_widget_activate( (GtkWidget*)entry );
                 }
             }
         }
